fixed logo / menu alignment

--- a/src/web/web/static-src/less/aerofs-marketing.less
+++ b/src/web/web/static-src/less/aerofs-marketing.less
@@ -274,7 +274,7 @@ body .gold-button {
 }
 .navbar-default .navbar-nav li a, .submenu li a {
     color: @darkblue;
-    padding: 15px 15px;
+    padding: 17px 15px;
     &:hover {
         color: @darkestblue;
     }
